--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tsconfig/next": "^1.0.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "typescript": "4.9.4"
